--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,9 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Grant write permission for GITHUB_TOKEN to push content
-      pages: write    # Required for Pages deployments
-      id-token: write # Required for OIDC authentication by Pages
+      contents: write
+      pages: write
+      id-token: write
 
     steps:
       - name: Checkout repository
@@ -22,28 +22,30 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: 'quiz-app/package-lock.json'
+          cache-dependency-path: 'quiz-app/package-lock.json' # Path relative to repo root
 
       - name: Install dependencies
         run: npm install
-        working-directory: ./quiz-app
+        working-directory: ./quiz-app # Run in the quiz-app subdirectory
 
       - name: Build Vue.js application
         run: npm run build
-        working-directory: ./quiz-app
+        working-directory: ./quiz-app # Run in the quiz-app subdirectory
 
       # Add this step to debug if the 'dist' directory is correctly created and populated
       - name: Verify Build Output
         run: |
-          echo "Listing contents of ./quiz-app/dist:"
-          ls -al ./quiz-app/dist
+          echo "Listing contents of ./quiz-app/dist (from repo root):"
+          ls -al ./quiz-app/dist # <--- Path relative to repo root
           echo "Listing contents of ./quiz-app/dist/assets (if applicable):"
-          ls -al ./quiz-app/dist/assets || true # `|| true` prevents error if assets dir doesn't exist
-        working-directory: ./quiz-app # This is important to ensure paths are relative to the working dir
+          ls -al ./quiz-app/dist/assets || true # <--- Path relative to repo root
+        # REMOVE working-directory from this step.
+        # This makes the paths relative to the runner's workspace root,
+        # which is where your repo is cloned.
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./quiz-app/dist
+          publish_dir: ./quiz-app/dist # <--- Path relative to repo root
           publish_branch: gh-pages
