--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,10 @@ jobs:
         env: # <--- ADD THIS ENV BLOCK
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }} # Use the secret you defined
 
+      - name: Copy 404.html to dist
+        run: cp ./404.html ./dist/
+        working-directory: ./quiz-app
+
       - name: Verify Build Output
         run: |
           echo "Listing contents of ./quiz-app/dist (from repo root):"
