--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,15 @@ jobs:
       - name: Build Vue.js application
         run: npm run build
         working-directory: ./quiz-app
-        env: # <--- ADD THIS ENV BLOCK
-          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }} # Use the secret you defined
+        env:
+          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
 
       - name: Copy 404.html to dist
         run: cp ./404.html ./dist/
+        working-directory: ./quiz-app
+
+      - name: Copy index.html to 404.html for GitHub Pages SPA routing
+        run: cp ./dist/index.html ./dist/404.html
         working-directory: ./quiz-app
 
       - name: Verify Build Output
