--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,13 @@ jobs:
         env:
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
 
-      - name: Copy 404.html to dist
-        run: cp ./404.html ./dist/
+      # NEW STEP: Inspect the built index.html content
+      - name: Inspect built index.html content
+        run: cat ./dist/index.html
         working-directory: ./quiz-app
 
-      - name: Copy index.html to 404.html for GitHub Pages SPA routing
+      # Keep this step: Copy the built index.html to 404.html
+      - name: Copy built index.html to 404.html for GitHub Pages SPA routing
         run: cp ./dist/index.html ./dist/404.html
         working-directory: ./quiz-app
 
